# django-simple-async-jobs

./: .gitignore  README.rst  setup.cfg
simple_jobs/: __init__.py  admin.py  apps.py  constants.py  models.py
simple_jobs/management/commands/: base_job_poller.py  one_off_job_poller.py  periodic_job_poller.py
simple_jobs/migrations/: 0001_initial.py  0002_alter_job_status.py
test_project/: requirements.txt
test_project/test_app/: periodic_jobs.py
test_project/test_project/: settings.py
